Add a "ceremony location outcome" class of countries
These countries display two questions (like the current "2 question
countries", but a different two): what country the user cares about,
and what country the user lives in.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -1,9 +1,9 @@
 ---
-lib/data/marriage_abroad_data.yml: e246605015db976bd223fc5ce1ea6743
+lib/data/marriage_abroad_data.yml: 625e5110ae112f44094c97b3673e336c
 lib/data/marriage_abroad_services.yml: 6a4a5b0168d8426b98382e69c92ea57d
 lib/data/rates/marriage_abroad_consular_fees.yml: 20afc9d15de06e0a199761433b055d9f
 lib/smart_answer/calculators/country_name_formatter.rb: 6e9aab3c79a59e54e056b473b9cc4151
-lib/smart_answer/calculators/marriage_abroad_calculator.rb: 0c0be55c3621e81a75af0f55827ad31c
+lib/smart_answer/calculators/marriage_abroad_calculator.rb: c4fbe2dd578e6115bf70d65a212c3800
 lib/smart_answer/calculators/registrations_data_query.rb: 80250f09bc28d55a86148de2e7a76429
 lib/smart_answer_flows/marriage-abroad/marriage_abroad.govspeak.erb: b4d0cfc1c7c4776d968c9b5b6df85027
 lib/smart_answer_flows/marriage-abroad/outcomes/_affirmation_os_translation_in_local_language_text.govspeak.erb: af09e09b909c563d4a587ef1b9285cca
@@ -402,6 +402,10 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_loc
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_local/_same_sex.govspeak.erb: ff190c3f37e6a09e3abdd9cac4ae6946
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_other/_opposite_sex.govspeak.erb: 3792c9972e4b5655045ddb1399952cd7
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_other/_same_sex.govspeak.erb: ff190c3f37e6a09e3abdd9cac4ae6946
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iceland/_ceremony_country.govspeak.erb: fb060d4f3c3d54acb41b667503d98219
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iceland/_third_country.govspeak.erb: 7fbcfb0fe7e47ac2aba387dd04ec87bd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iceland/_title.govspeak.erb: d484da0ca0057ce98018efa821feb2cf
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/iceland/_uk.govspeak.erb: e940a66cc4158bc2c139ebb4941d4d80
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/india/_opposite_sex.erb: 8ef771bde4cd21116aac53c6bc184f5c
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/india/_same_sex.erb: 2d762f8f71ad44e024641ff163fac79f
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/india/_title.govspeak.erb: 673be9937f59b6e203b19ab5c41ecffe
@@ -865,7 +869,7 @@ lib/smart_answer_flows/marriage-abroad/questions/legal_residency.govspeak.erb: 7
 lib/smart_answer_flows/marriage-abroad/questions/marriage_or_pacs.govspeak.erb: a51aecfac697188f90ca9efefcb2e0ea
 lib/smart_answer_flows/marriage-abroad/questions/partner_opposite_or_same_sex.govspeak.erb: 40d0c99a5be50f0625c6562f06fe4afd
 lib/smart_answer_flows/marriage-abroad/questions/what_is_your_partners_nationality.govspeak.erb: 80e04f36c75c232bede1a244d621471e
-lib/smart_answer_flows/marriage-abroad.rb: 357481b567065c0465a612da0de3c85c
+lib/smart_answer_flows/marriage-abroad.rb: 75f7f90555c8a7faf44edb6d6841a4b3
 lib/smart_answer_flows/shared/_overseas_passports_embassies.govspeak.erb: 1dc349abcd6b21e1bf8c397d96fd02b8
 test/data/marriage-abroad-questions-and-responses.yml: 0f079512ee2f1fd27145bf9db84ef5eb
 test/data/marriage-abroad-responses-and-expected-results.yml: 14bda20e8389bdff7fbb503267884286
