Configure smartanswers heroku apps to use hobby dyno plan

--- a/app.json
+++ b/app.json
@@ -12,5 +12,11 @@
     "ERRBIT_ENV": "integration"
   },
   "image": "heroku/ruby",
-  "buildpacks": [ { "url": "heroku/ruby" } ]
+  "buildpacks": [ { "url": "heroku/ruby" } ],
+  "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "hobby"
+    }
+  }
 }
