--- a/test/data/check-uk-visa-responses-and-expected-results.yml
+++ b/test/data/check-uk-visa-responses-and-expected-results.yml
@@ -1172,161 +1172,7 @@
   - estonia
   - alien
   - transit
-  :next_node: :travelling_to_cta?
-  :outcome_node: false
-- :current_node: :travelling_to_cta?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  :next_node: :channel_islands_or_isle_of_man?
-  :outcome_node: false
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - tourism
-  :next_node: :outcome_standard_visit
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - work
-  :next_node: :staying_for_how_long?
-  :outcome_node: false
-- :current_node: :staying_for_how_long?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - work
-  - six_months_or_less
-  :next_node: :outcome_work_m
-  :outcome_node: true
-- :current_node: :staying_for_how_long?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - work
-  - longer_than_six_months
-  :next_node: :outcome_work_y
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - study
-  :next_node: :staying_for_how_long?
-  :outcome_node: false
-- :current_node: :staying_for_how_long?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - study
-  - six_months_or_less
-  :next_node: :outcome_study_m
-  :outcome_node: true
-- :current_node: :staying_for_how_long?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - study
-  - longer_than_six_months
-  :next_node: :outcome_study_y
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - family
-  :next_node: :outcome_joining_family_y
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - marriage
-  :next_node: :outcome_marriage_visa_nat_datv
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - school
-  :next_node: :outcome_school_y
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - medical
-  :next_node: :outcome_medical_y
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - diplomatic
-  :next_node: :outcome_diplomatic_business
-  :outcome_node: true
-- :current_node: :travelling_to_cta?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - republic_of_ireland
-  :next_node: :outcome_transit_to_the_republic_of_ireland
-  :outcome_node: true
-- :current_node: :travelling_to_cta?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - somewhere_else
-  :next_node: :passing_through_uk_border_control?
-  :outcome_node: false
-- :current_node: :passing_through_uk_border_control?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - somewhere_else
-  - 'yes'
-  :next_node: :outcome_transit_leaving_airport_datv
-  :outcome_node: true
-- :current_node: :passing_through_uk_border_control?
-  :responses:
-  - estonia
-  - alien
-  - transit
-  - somewhere_else
-  - 'no'
-  :next_node: :outcome_transit_datv_exception
+  :next_node: :outcome_no_visa_needed
   :outcome_node: true
 - :current_node: :purpose_of_visit?
   :responses:
@@ -2864,161 +2710,7 @@
   - latvia
   - alien
   - transit
-  :next_node: :travelling_to_cta?
-  :outcome_node: false
-- :current_node: :travelling_to_cta?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  :next_node: :channel_islands_or_isle_of_man?
-  :outcome_node: false
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - tourism
-  :next_node: :outcome_standard_visit
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - work
-  :next_node: :staying_for_how_long?
-  :outcome_node: false
-- :current_node: :staying_for_how_long?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - work
-  - six_months_or_less
-  :next_node: :outcome_work_m
-  :outcome_node: true
-- :current_node: :staying_for_how_long?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - work
-  - longer_than_six_months
-  :next_node: :outcome_work_y
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - study
-  :next_node: :staying_for_how_long?
-  :outcome_node: false
-- :current_node: :staying_for_how_long?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - study
-  - six_months_or_less
-  :next_node: :outcome_study_m
-  :outcome_node: true
-- :current_node: :staying_for_how_long?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - study
-  - longer_than_six_months
-  :next_node: :outcome_study_y
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - family
-  :next_node: :outcome_joining_family_y
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - marriage
-  :next_node: :outcome_marriage_visa_nat_datv
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - school
-  :next_node: :outcome_school_y
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - medical
-  :next_node: :outcome_medical_y
-  :outcome_node: true
-- :current_node: :channel_islands_or_isle_of_man?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - channel_islands_or_isle_of_man
-  - diplomatic
-  :next_node: :outcome_diplomatic_business
-  :outcome_node: true
-- :current_node: :travelling_to_cta?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - republic_of_ireland
-  :next_node: :outcome_transit_to_the_republic_of_ireland
-  :outcome_node: true
-- :current_node: :travelling_to_cta?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - somewhere_else
-  :next_node: :passing_through_uk_border_control?
-  :outcome_node: false
-- :current_node: :passing_through_uk_border_control?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - somewhere_else
-  - 'yes'
-  :next_node: :outcome_transit_leaving_airport_datv
-  :outcome_node: true
-- :current_node: :passing_through_uk_border_control?
-  :responses:
-  - latvia
-  - alien
-  - transit
-  - somewhere_else
-  - 'no'
-  :next_node: :outcome_transit_datv_exception
+  :next_node: :outcome_no_visa_needed
   :outcome_node: true
 - :current_node: :purpose_of_visit?
   :responses:
