--- a/test/data/check-uk-visa-responses-and-expected-results.yml
+++ b/test/data/check-uk-visa-responses-and-expected-results.yml
@@ -641,6 +641,94 @@
   :outcome_node: true
 - :current_node: :what_passport_do_you_have?
   :responses:
+  - armenia
+  :next_node: :purpose_of_visit?
+  :outcome_node: false
+- :current_node: :purpose_of_visit?
+  :responses:
+  - armenia
+  - tourism
+  :next_node: :travelling_visiting_partner_family_member?
+  :outcome_node: false
+- :current_node: :travelling_visiting_partner_family_member?
+  :responses:
+  - armenia
+  - tourism
+  - 'yes'
+  :next_node: :article_10_card?
+  :outcome_node: false
+- :current_node: :travelling_visiting_partner_family_member?
+  :responses:
+  - armenia
+  - tourism
+  - 'no'
+  :next_node: :outcome_standard_visitor_visa
+  :outcome_node: true
+- :current_node: :article_10_card?
+  :responses:
+  - armenia
+  - tourism
+  - 'yes'
+  - 'yes'
+  :next_node: :outcome_no_visa_needed
+  :outcome_node: true
+- :current_node: :article_10_card?
+  :responses:
+  - armenia
+  - tourism
+  - 'yes'
+  - 'no'
+  :next_node: :outcome_tourism_visa_partner
+  :outcome_node: true
+- :current_node: :purpose_of_visit?
+  :responses:
+  - armenia
+  - family
+  :next_node: :article_10_card?
+  :outcome_node: false
+- :current_node: :article_10_card?
+  :responses:
+  - armenia
+  - family
+  - 'no'
+  :next_node: :partner_family_british_citizen?
+  :outcome_node: false
+- :current_node: :partner_family_british_citizen?
+  :responses:
+  - armenia
+  - family
+  - 'no'
+  - 'yes'
+  :next_node: :outcome_partner_family_british_citizen_y
+  :outcome_node: true
+- :current_node: :partner_family_british_citizen?
+  :responses:
+  - armenia
+  - family
+  - 'no'
+  - 'no'
+  :next_node: :partner_family_eea?
+  :outcome_node: false
+- :current_node: :partner_family_british_citizen?
+  :responses:
+  - armenia
+  - family
+  - 'no'
+  - 'no'
+  - 'yes'
+  :next_node: :outcome_partner_family_eea_y
+  :outcome_node: true
+- :current_node: :partner_family_british_citizen?
+  :responses:
+  - armenia
+  - family
+  - 'no'
+  - 'no'
+  - 'no'
+  :next_node: :outcome_partner_family_eea_n
+  :outcome_node: true
+- :current_node: :what_passport_do_you_have?
+  :responses:
   - austria
   :next_node: :outcome_no_visa_needed
   :outcome_node: true
