Update Swaziland to Eswatini

--- a/lib/data/passport_data.yml
+++ b/lib/data/passport_data.yml
@@ -1947,7 +1947,7 @@ suriname:
   applying: 6 weeks
   replacing: 6 weeks
   optimistic_processing_time?: true
-swaziland:
+eswatini:
   type: ips_application_1
   group: ips_documents_group_2
   app_form: hmpo_1_application_form
