--- a/lib/data/prisoner_packs.yml
+++ b/lib/data/prisoner_packs.yml
@@ -475,7 +475,7 @@
   lawyer: /government/publications/sudan-list-of-lawyers
 - slug: suriname
   pdf: /government/publications/guyana-prisoner-pack
-- slug: swaziland
+- slug: eswatini
 - slug: sweden
   pdf: /government/publications/sweden-prisoner-pack
   lawyer: /government/publications/sweden-list-of-lawyers
