Flatten Uganda to 18 outcomes

--- a/lib/data/marriage_abroad_data.yml
+++ b/lib/data/marriage_abroad_data.yml
@@ -32,6 +32,7 @@ countries_with_18_outcomes:
   - sweden
   - tanzania
   - tunisia
+  - uganda
   - vietnam
 countries_with_2_outcomes:
   - australia
