Rename "Gambia" to "The Gambia"

--- a/lib/data/marriage_abroad_data.yml
+++ b/lib/data/marriage_abroad_data.yml
@@ -12,7 +12,7 @@ countries_with_18_outcomes:
   - ecuador
   - el-salvador
   - ethiopia
-  - gambia
+  - the-gambia
   - germany
   - greece
   - hungary
