--- a/lib/data/prisoner_packs.yml
+++ b/lib/data/prisoner_packs.yml
@@ -190,7 +190,7 @@
 - slug: french-guiana
 - slug: french-polynesia
 - slug: gabon
-- slug: gambia
+- slug: the-gambia
   pdf: /government/publications/gambia-prisoner-pack
   lawyer: /government/publications/gambia-list-of-lawyers
 - slug: georgia
