--- a/test/data/marriage-abroad-responses-and-expected-results.yml
+++ b/test/data/marriage-abroad-responses-and-expected-results.yml
@@ -7956,25 +7956,25 @@
   :outcome_node: true
 - :current_node: :country_of_ceremony?
   :responses:
-  - gambia
+  - the-gambia
   :next_node: :legal_residency?
   :outcome_node: false
 - :current_node: :legal_residency?
   :responses:
-  - gambia
+  - the-gambia
   - uk
   :next_node: :what_is_your_partners_nationality?
   :outcome_node: false
 - :current_node: :what_is_your_partners_nationality?
   :responses:
-  - gambia
+  - the-gambia
   - uk
   - partner_british
   :next_node: :partner_opposite_or_same_sex?
   :outcome_node: false
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - uk
   - partner_british
   - opposite_sex
@@ -7982,7 +7982,7 @@
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - uk
   - partner_british
   - same_sex
@@ -7990,14 +7990,14 @@
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
-  - gambia
+  - the-gambia
   - uk
   - partner_local
   :next_node: :partner_opposite_or_same_sex?
   :outcome_node: false
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - uk
   - partner_local
   - opposite_sex
@@ -8005,7 +8005,7 @@
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - uk
   - partner_local
   - same_sex
@@ -8013,14 +8013,14 @@
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
-  - gambia
+  - the-gambia
   - uk
   - partner_other
   :next_node: :partner_opposite_or_same_sex?
   :outcome_node: false
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - uk
   - partner_other
   - opposite_sex
@@ -8028,7 +8028,7 @@
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - uk
   - partner_other
   - same_sex
@@ -8036,20 +8036,20 @@
   :outcome_node: true
 - :current_node: :legal_residency?
   :responses:
-  - gambia
+  - the-gambia
   - ceremony_country
   :next_node: :what_is_your_partners_nationality?
   :outcome_node: false
 - :current_node: :what_is_your_partners_nationality?
   :responses:
-  - gambia
+  - the-gambia
   - ceremony_country
   - partner_british
   :next_node: :partner_opposite_or_same_sex?
   :outcome_node: false
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - ceremony_country
   - partner_british
   - opposite_sex
@@ -8057,7 +8057,7 @@
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - ceremony_country
   - partner_british
   - same_sex
@@ -8065,14 +8065,14 @@
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
-  - gambia
+  - the-gambia
   - ceremony_country
   - partner_local
   :next_node: :partner_opposite_or_same_sex?
   :outcome_node: false
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - ceremony_country
   - partner_local
   - opposite_sex
@@ -8080,7 +8080,7 @@
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - ceremony_country
   - partner_local
   - same_sex
@@ -8088,14 +8088,14 @@
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
-  - gambia
+  - the-gambia
   - ceremony_country
   - partner_other
   :next_node: :partner_opposite_or_same_sex?
   :outcome_node: false
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - ceremony_country
   - partner_other
   - opposite_sex
@@ -8103,7 +8103,7 @@
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - ceremony_country
   - partner_other
   - same_sex
@@ -8111,20 +8111,20 @@
   :outcome_node: true
 - :current_node: :legal_residency?
   :responses:
-  - gambia
+  - the-gambia
   - third_country
   :next_node: :what_is_your_partners_nationality?
   :outcome_node: false
 - :current_node: :what_is_your_partners_nationality?
   :responses:
-  - gambia
+  - the-gambia
   - third_country
   - partner_british
   :next_node: :partner_opposite_or_same_sex?
   :outcome_node: false
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - third_country
   - partner_british
   - opposite_sex
@@ -8132,7 +8132,7 @@
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - third_country
   - partner_british
   - same_sex
@@ -8140,14 +8140,14 @@
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
-  - gambia
+  - the-gambia
   - third_country
   - partner_local
   :next_node: :partner_opposite_or_same_sex?
   :outcome_node: false
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - third_country
   - partner_local
   - opposite_sex
@@ -8155,7 +8155,7 @@
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - third_country
   - partner_local
   - same_sex
@@ -8163,14 +8163,14 @@
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
-  - gambia
+  - the-gambia
   - third_country
   - partner_other
   :next_node: :partner_opposite_or_same_sex?
   :outcome_node: false
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - third_country
   - partner_other
   - opposite_sex
@@ -8178,7 +8178,7 @@
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
-  - gambia
+  - the-gambia
   - third_country
   - partner_other
   - same_sex
