--- a/test/data/help-if-you-are-arrested-abroad-files.yml
+++ b/test/data/help-if-you-are-arrested-abroad-files.yml
@@ -6,8 +6,9 @@ lib/smart_answer_flows/help-if-you-are-arrested-abroad/outcomes/_common_download
 lib/smart_answer_flows/help-if-you-are-arrested-abroad/outcomes/_further_links.govspeak.erb: c9d3520db7b56be01240c9dd96bf979d
 lib/smart_answer_flows/help-if-you-are-arrested-abroad/outcomes/_iran_downloads.govspeak.erb: 61a83f9b1a75db92209b4269cd9cdb2a
 lib/smart_answer_flows/help-if-you-are-arrested-abroad/outcomes/answer_one_generic.govspeak.erb: 348c0375403c68b6f97c2e3acb5c08ff
+lib/smart_answer_flows/help-if-you-are-arrested-abroad/outcomes/answer_three_british_overseas_territories.govspeak.erb: 8df5d174abd75215765717a5615dbc11
 lib/smart_answer_flows/help-if-you-are-arrested-abroad/outcomes/answer_three_syria.govspeak.erb: 0b22adb7456839f2445b2f7c36936d84
 lib/smart_answer_flows/help-if-you-are-arrested-abroad/questions/which_country.govspeak.erb: 913b5637a2814cbd529affffc55b1f72
-lib/smart_answer_flows/help-if-you-are-arrested-abroad.rb: f4e9ae1b40e777d9340428c4762f36ab
-test/data/help-if-you-are-arrested-abroad-questions-and-responses.yml: 948596375babd3af8efb57bfb4b8caa7
-test/data/help-if-you-are-arrested-abroad-responses-and-expected-results.yml: e09861e9882a78dd89cf349af84a45ca
+lib/smart_answer_flows/help-if-you-are-arrested-abroad.rb: fac05805be170061d2c3c88869e8fa92
+test/data/help-if-you-are-arrested-abroad-questions-and-responses.yml: 1808c8485e3b2883eb3e235aba066588
+test/data/help-if-you-are-arrested-abroad-responses-and-expected-results.yml: 8dd5311b7c04973b14a0b88087c4e03b
