--- a/test/data/marriage-abroad-responses-and-expected-results.yml
+++ b/test/data/marriage-abroad-responses-and-expected-results.yml
@@ -16276,6 +16276,236 @@
   :outcome_node: true
 - :current_node: :country_of_ceremony?
   :responses:
+  - panama
+  :next_node: :legal_residency?
+  :outcome_node: false
+- :current_node: :legal_residency?
+  :responses:
+  - panama
+  - uk
+  :next_node: :what_is_your_partners_nationality?
+  :outcome_node: false
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - panama
+  - uk
+  - partner_british
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - uk
+  - partner_british
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_uk
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - uk
+  - partner_british
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - panama
+  - uk
+  - partner_local
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - uk
+  - partner_local
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_uk
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - uk
+  - partner_local
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - panama
+  - uk
+  - partner_other
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - uk
+  - partner_other
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_uk
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - uk
+  - partner_other
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :outcome_node: true
+- :current_node: :legal_residency?
+  :responses:
+  - panama
+  - ceremony_country
+  :next_node: :what_is_your_partners_nationality?
+  :outcome_node: false
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - panama
+  - ceremony_country
+  - partner_british
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - ceremony_country
+  - partner_british
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_ceremony_country
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - ceremony_country
+  - partner_british
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - panama
+  - ceremony_country
+  - partner_local
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - ceremony_country
+  - partner_local
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_ceremony_country
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - ceremony_country
+  - partner_local
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - panama
+  - ceremony_country
+  - partner_other
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - ceremony_country
+  - partner_other
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_ceremony_country
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - ceremony_country
+  - partner_other
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :outcome_node: true
+- :current_node: :legal_residency?
+  :responses:
+  - panama
+  - third_country
+  :next_node: :what_is_your_partners_nationality?
+  :outcome_node: false
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - panama
+  - third_country
+  - partner_british
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - third_country
+  - partner_british
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_third_country
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - third_country
+  - partner_british
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - panama
+  - third_country
+  - partner_local
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - third_country
+  - partner_local
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_third_country
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - third_country
+  - partner_local
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - panama
+  - third_country
+  - partner_other
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - third_country
+  - partner_other
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_third_country
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - panama
+  - third_country
+  - partner_other
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :outcome_node: true
+- :current_node: :country_of_ceremony?
+  :responses:
   - paraguay
   :next_node: :legal_residency?
   :outcome_node: false
